--- a/foodcourse/src/index.css
+++ b/foodcourse/src/index.css
@@ -1,8 +1,24 @@
 html {
-  font-size: 20px;
+  font-size: 15px;
 }
 
 body{
   font-family: verdana; 
   margin: 0; 
+}
+
+#main-layout{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template: 
+  "n" 60px
+  "c";
+
+}
+#content {
+  grid-area: c;
+}
+#nav{
+  grid-area: n;
 }
