--- a/foodcourse/src/component/Nav/NavStyle.css
+++ b/foodcourse/src/component/Nav/NavStyle.css
@@ -1,10 +1,10 @@
 #nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;;
 }
 #nav .-brand {
     display: grid;
-    grid-template-columns: 40px auto;
+    grid-template-columns:  auto;
     align-items: center;
     height: 100%;
 }
@@ -25,10 +25,10 @@
     margin: auto;
 }
 #nav .-center {
-    width: 732px;
+    width: 1100px;
     display: grid;
-    grid-template-columns: auto 40px;
-    justify-content: start;
+    grid-template-columns: auto;
+    justify-content: end;
     align-items: center;
 }
 #nav .-search-input {
