--- a/foodcourse/src/component/Content/ContentStyle.css
+++ b/foodcourse/src/component/Content/ContentStyle.css
@@ -7,11 +7,11 @@
     padding-bottom: 30px;
     justify-content: center;
 }
-.card .-thumb {
-    aspect-ratio: 16/9;
-    border-radius: 12px;
-    margin-bottom: 12px;
-    overflow: hidden;
+.card .-thumb img{
+    width: 100%; 
+    height: auto; 
+    max-width: 320px; 
+    border-radius: 8px; 
 }
 .card .-name {
     font-size: 17px;
