--- a/foodcourse/src/component/Nav/NavStyle.css
+++ b/foodcourse/src/component/Nav/NavStyle.css
@@ -1,6 +1,6 @@
 #nav {
     display: flex;
-    justify-content: flex-start;;
+    justify-content: flex-start;
 }
 #nav .-brand {
     display: grid;
@@ -26,6 +26,7 @@
 }
 #nav .-center {
     width: 1100px;
+    height: 100px;
     display: grid;
     grid-template-columns: auto;
     justify-content: end;
