--- a/foodcourse/src/index.css
+++ b/foodcourse/src/index.css
@@ -7,15 +7,15 @@ body{
   margin: 0; 
 }
 
-#main-layout{
+/* #main-layout{
   width: 100vw;
   height: 100vh;
   display: grid;
   grid-template: 
-  "n" 60px
+  "n" 
   "c";
+} */
 
-}
 #content {
   grid-area: c;
 }
