update nev responsive

--- a/foodcourse/src/component/Nav/NavStyle.css
+++ b/foodcourse/src/component/Nav/NavStyle.css
@@ -77,7 +77,6 @@
 #nav .-search-input:focus-visible {
     outline: none;
 }
-/* Media Queries for Responsive Design */
 @media (max-width: 768px) {
     #nav {
         flex-direction: column;
@@ -98,6 +97,7 @@
 @media (max-width: 480px) {
     #nav .-center {
         padding: 0.5rem;
+        width: 100%;
     }
     #nav .-search-input {
         padding-left: 0.5rem;
